[project]
name = "avalayers"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "avaframe>=1.13",
    "fabdem>=0.1.0",
    "folium>=0.20.0",
    "matplotlib>=3.10.8",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-material>=9.7.4",
    "mkdocstrings[python]>=1.0.3",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "planetary-computer>=1.0.0",
    "pyproj>=3.7.2",
    "pystac-client>=0.9.0",
    "rasterio>=1.5.0",
    "requests>=2.32.5",
    "shapely>=2.1.2",
    "sip>=6.15.1",
    "xyzservices>=2025.11.0",
]
