[project]
name = "avalayers"
version = "0.1.0"
description = ""
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.14"
dependencies = [
    "avaframe>=1.13",
    "folium>=0.20.0",
    "geopandas>=0.14.0",
    "matplotlib>=3.10.8",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.4",
    "mkdocstrings[python]>=1.0.3",
    "numpy>=2.4.2",
    "planetary-computer>=1.0.0",
    "pyproj>=3.7.2",
    "pystac-client>=0.9.0",
    "rasterio>=1.5.0",
    "requests>=2.32.5",
    "shapely>=2.1.2",
    "tqdm>=4.66.0",
]
